# sciencestack-cli

./: .env.example  README.md  deploy.sh  pyproject.toml
src/sciencestack/: cli.py  client.py  formatters.py
tests/: test_cli_output_modes.py
