[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sciencestack"
version = "0.1.0"
description = "CLI for querying structured scientific papers via the ScienceStack API"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
sciencestack = "sciencestack.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sciencestack"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
