[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sciencestack"
version = "0.1.2"
description = "CLI for querying structured scientific papers via the ScienceStack API"
readme = "README.md"
license = "MIT"
authors = [{ name = "CJ", email = "cj@sciencestack.ai" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://sciencestack.ai"
Repository = "https://github.com/sciencestack/sciencestack-cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
sciencestack = "sciencestack.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sciencestack"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
